--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -6,7 +6,7 @@
 @import 'layout/navigation'
 @import 'layout/footer'
 
-@import 'components/form'
+@import 'components/modal'
 
 @import 'pages/home'
 @import 'pages/employee'
